err/nsfw-dl.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aiohttp'...
Listing './lib/python3.5/site-packages/aiohttp-2.3.7.dist-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/nsfw_dl'...
Compiling './lib/python3.5/site-packages/nsfw_dl/dl.py'...
***   File "./lib/python3.5/site-packages/nsfw_dl/dl.py", line 179
    raise NoLoader(f"No loader named {name!r}")
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nsfw_dl/loaders'...
Compiling './lib/python3.5/site-packages/nsfw_dl/loaders/danbooru.py'...
***   File "./lib/python3.5/site-packages/nsfw_dl/loaders/danbooru.py", line 21
    return f'https://danbooru.donmai.us{data.find(id="image").get("src")}'
                                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nsfw_dl/loaders/e621.py'...
***   File "./lib/python3.5/site-packages/nsfw_dl/loaders/e621.py", line 32
    f"post&q=index&tags={args}", {}, {})
    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nsfw_dl/loaders/furrybooru.py'...
***   File "./lib/python3.5/site-packages/nsfw_dl/loaders/furrybooru.py", line 32
    f"&s=list&tags={args}", {}, {})
    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nsfw_dl/loaders/gelbooru.py'...
***   File "./lib/python3.5/site-packages/nsfw_dl/loaders/gelbooru.py", line 22
    return f'https:{data.find(id="image").get("src")}'
                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nsfw_dl/loaders/konachan.py'...
***   File "./lib/python3.5/site-packages/nsfw_dl/loaders/konachan.py", line 23
    return f'https:{data.find(id="highres").get("href")}'
                                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nsfw_dl/loaders/lolibooru.py'...
***   File "./lib/python3.5/site-packages/nsfw_dl/loaders/lolibooru.py", line 31
    return f"https://lolibooru.moe/post/index.json?tags={args}", {}, {}
                                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nsfw_dl/loaders/rule34.py'...
***   File "./lib/python3.5/site-packages/nsfw_dl/loaders/rule34.py", line 32
    f"?page=dapi&s=post&q=index&tags={args}", {}, {})
    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nsfw_dl/loaders/tbib.py'...
***   File "./lib/python3.5/site-packages/nsfw_dl/loaders/tbib.py", line 21
    return f'https:{data.find(id="image").get("src")}'
                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nsfw_dl/loaders/xbooru.py'...
***   File "./lib/python3.5/site-packages/nsfw_dl/loaders/xbooru.py", line 32
    f"&s=post&q=index&tags={args}", {}, {})
    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nsfw_dl/loaders/yandere.py'...
***   File "./lib/python3.5/site-packages/nsfw_dl/loaders/yandere.py", line 31
    return f"https://yande.re/post.json?tags={args}", {}, {}
                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nsfw_dl-0.4.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yarl'...
Listing './lib/python3.5/site-packages/yarl-0.18.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
